--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,10 @@
                             <a class="active" href="/">Trang chủ 🏠</a>
                         </li>
                         <li>
-                            <a class="active" href="/map">Webgis 🏠</a>
+                            <a class="active" href="/map">Thông tin Việt Nam</a>
+                        </li>
+                        <li>
+                            <a class="active" href="/routing">Định tuyến bản đồ</a>
                         </li>
                         <li>
                             <a class="active" href="javascript:void(0)">Bản đồ</a>
