--- a/templates/index.html
+++ b/templates/index.html
@@ -175,7 +175,7 @@
     <div class="container-fluid">
         <div class="section-title text-center" data-aos="fade-up">
         </div>
-        <div class="row" style="height: 800px; position: relative;">
+        <div class="row" style="height: 600px; position: relative;">
           <button id="fullscreen-button" class="btn btn-primary" style="position: absolute; top: 10px; right: 10px; z-index: 1000;">
               Fullscreen
           </button>
@@ -191,9 +191,9 @@
               </div>
               
                           
-            <div class="card" style="position: absolute; bottom: 10px; left: 10px; z-index: 999; width: 220px;">
+            <div class="card" style="position: absolute; bottom: 10px; left: 10px; z-index: 999; width: 200px;">
               <div class="card-body">
-                <h5 class="card-title">Lựa chọn lớp bản đồ</h5>
+                <h5 class="card-title">chọn lớp bản đồ</h5>
                 <select id="layerSelect" class="form-control">
                   <option value="district">Lớp Chính</option>
                   <option value="province" selected>Lớp Tỉnh</option>
