--- a/templates/routing.html
+++ b/templates/routing.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-{% endblock %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    {% endblock %}
 
 {% block content %}
 <!DOCTYPE html>
@@ -171,31 +173,30 @@
     <section class="special-services">
         <div class="container-fluid">
             
-            <div class="row" style="height: 800px; position: relative;">
+            <div class="row" style="height: 600px; position: relative;">
                 <button id="fullscreen-button" class="btn btn-primary" style="position: absolute; top: 10px; right: 10px; z-index: 1000;">
                     Fullscreen
                 </button>
+
                 <div id="map">
+                  <button id="backToPreviousBtn" class="btn btn-primary" style="position: absolute; top: 20px; right: 800px; z-index: 1000;">
+                    Quay lại
+                  </button>
                     <div style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); z-index: 1000; width: 300px;">
                         
                         <input
                           type="text"
                           id="destinationInput"
                           class="form-control"
-                          placeholder="Nhập tên tỉnh miền Nam..."
+                          placeholder="Nhập địa điểm bạn muốn đi..."
                           oninput="showSuggestions()"
                           onfocus="showSuggestions()"
                           onkeydown="handleSearch(event)"
                         >
                         <div id="suggestions" class="list-group" style="position: absolute; width: 100%; max-height: 200px; overflow-y: auto;"></div>
                       </div>
-                      
-                      <div id="map" style="height: 600px;"></div>
-                      
-                      
-                      <div id="map" style="height: 600px;"></div>
-                      
-                </div>
+
+              </div>
             </div>
           
         </div>
